# unifi-fabric-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  issue-pull.yml  lint-public-language.yml  publish.yml
config/: company-mcp.example.json  mcp-server.example.json
docs/: TOOLS.md
scripts/: generate_tools_docs.py
src/unifi_fabric/: client.py  config.py  registry.py  server.py
src/unifi_fabric/tools/: aggregation.py  clients.py  device_mgmt.py  firewall_proxy.py  hotspot.py  network.py  network_services_proxy.py  protect.py  site_manager.py  statistics.py  vpn.py
tests/: test_aggregation.py  test_auto_semver_tag.py  test_bearer_auth.py  test_client.py  test_clients.py  test_console_integration.py  test_device_mgmt.py  test_firewall_proxy.py  test_hotspot.py  test_log_level.py  test_network.py  test_network_services_proxy.py  test_networks_integration.py  test_protect.py  test_protect_cameras.py  test_protect_integration.py  test_proxy_uuid_contract.py  test_registry.py  test_routing.py  test_server.py  test_server_startup.py  test_site_manager.py  test_site_manager_integration.py  test_statistics.py  test_vpn.py
tests/fixtures/: proxy_sites_response.json
